Fix small screen menu/logo overlap.
Fixes #2

--- a/assets/scss/static/_header.scss
+++ b/assets/scss/static/_header.scss
@@ -26,7 +26,7 @@ The static site header.
 
   // Menu
   .primary-nav {
-    height: 60px;
+    height: 100px;
     margin: 0.5em 0.5em 0.5em 0;
     text-align: center;
 
